<resources>
    <string name="app_name">Hatalk</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">인연</string>
    <string name="title_notifications">프로필</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="service_description">하트 시그널을 느껴볼 기회!</string>
    <string name="service_name">하톡 시그널!!</string>
    <string name="login_button">로그인으로</string>
    <string name="signal_room">시그널 룸</string>
    <string name="guideIntroduce">시그널 룸 입주를 환영합니다!\n\n 잠시 후 자기소개가 시작됩니다.\n 간단한 인사를 나누세요 :)</string>
    <string name="guideBeforeFirstCall">잠시 후, 1:1 채팅을 위해 \n <b>시크릿 룸</b>으로 이동합니다.</string>
    <string name="guideAfterFirstCall">서로에 대해 알아보는 \n 연애관 게임입니다.</string>
    <string name="guideAfterSecondCall">더 알아보고 싶은 분을 선택해주세요.\n 매칭 된 커플은 영상통화를 진행합니다.</string>


    <string name="saying_first">“사랑은 결정이 아니다.\n 사랑은 감정이다.\n 누구를 사랑할 수 있다면\n 훨씬 더 간단하겠지만\n 마법처럼 느껴지지는 않을 것이다.”\n\n - 트레이 파커</string>
    <string name="saying_second">“사랑은 자신 이외에\n 다른 것도 존재한다는 사실을\n 어렵사리 깨닫는 것이다.“\n\n - 아이리스 머독</string>
    <string name="guideOneToOneCall">1:1 음성 통화 시간입니다.</string>
    <string name="name_input">이름을 입력하세요</string>
    <string name="social_number_input">주민번호 7자리를 입력하세요</string>
    <string name="carrier">통신사를 입력하세요</string>
    <string name="phone_number">휴대폰 번호를 입력하세요</string>
    <string name="nickname">닉네임을 입력하세요</string>
    <string name="register_image">사진 등록</string>
    <string name="direct_room"><b>서로를 조금 더 알아갈 수 있는 시간입니다.</b></string>
    <!--    SendBird APP ID-->
    <string name="comet_key">1977065b668f17f5</string>
    <!--    Test마다 변경해서 해줘야 합니다-->
    <string name="currentUser">TestUser1</string>
    <string name="opponentUser">TestUser2</string>
    <string name="loading">로딩중...</string>
    <string name="last_loading">상대의 마음을\n 확인 중입니다...</string>
    <!--    Bottom navBar -->
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="alarm">Alarm</string>
    <string name="profile">Profile</string>
    <string name="matching_start_button">매칭하기</string>
    <string name="Lounge"><b>라운지</b></string>
    <string name="Profile"><b>프로필</b></string>
    <string name="question_for_man">남성분들은 연애관 질문에 답변해주세요</string>
    <string name="question_for_woman">여성분들은 마음에 드는 답변을 선택해주세요</string>
    <string name="final_choice">잠시 후 최종 선택이 진행됩니다</string>
    <string name="match">인연</string>
    <string name="is_matching">이 분과 계속 인연을 이어가시겠습니까?</string>
    <string name="match_accomplished">매칭 성사!!</string>
    <string name="move_to_chat">잠시 후 1대1 채팅으로 넘어갑니다</string>
    <string name="match_failed">매칭 실패ㅠㅠ</string>
    <string name="move_to_home">잠시 후 홈 화면으로 넘어갑니다</string>
    <string name="move_to_call">잠시 후 1대1 전화로 넘어갑니다</string>
    <string name="self_intro">자기 소개 시간입니다</string>
    <string name="first_choice">첫 인상 선택</string>
    <string name="group_call_succeed">연결 됐습니다</string>
    <string name="direct_call_succeed">1대1 콜 연결 됐습니다</string>
    <string name="video_call_succeed">1대1 영상 통화 연결 됐습니다</string>
    <string name="final_choice_dialog_title">최종선택</string>
</resources>