<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hatalk.home.StartFragment">

    <data>
        <variable
            name="startFragment"
            type="com.example.hatalk.home.StartFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:importantForAccessibility="no"
            android:scaleType="center" />

        <TextView
            android:id="@+id/service_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:text="@string/service_description"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:text="@string/service_name"
            android:textAlignment="center" />

        <Button
            android:id="@+id/move_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:text="@string/login_button"
            android:onClick="@{() -> startFragment.moveToLogin()}"/>


    </LinearLayout>


</layout>